force-app/main/default/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AMS Global</fullName>
        <description>Generic Sales Process for all AMS opportunities.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Planning</fullName>
        </values>
        <values>
            <fullName>Post Proposal Acceptance</fullName>
        </values>
        <values>
            <fullName>Quoting %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Contract_Copy_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If an additional copy is needed, indicate the Contact to send to.</inlineHelpText>
        <label>Additional Contract Copy To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities as Additional Copy</relationshipLabel>
        <relationshipName>Opportunities_As_Additional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ancillary_Missing_Revenue_Count__c</fullName>
        <description>Count of Opportunity Product records that are Selected, and have the Sales Price (USAble Revenue) field blank if product is not &quot;Plan Offering&quot; or if that is the product, and there is value in the Dental Coverage Code field.</description>
        <label>Ancillary Missing Revenue Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Missing_Required_Revenue_for_Rollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Base_Default_Plan_Explanation__c</fullName>
        <inlineHelpText>Enter the details for the Base or Default plan if you indicated it is in use.</inlineHelpText>
        <label>Base/Default Plan Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Default_Plan__c</fullName>
        <inlineHelpText>Indicate if a Base or Default plan will be used or not.</inlineHelpText>
        <label>Base/Default Plan?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_s__c</fullName>
        <description>Competitor(s) for this opportunity</description>
        <inlineHelpText>Hold Control Key (Command Key on Mac) to select multiple competitors.</inlineHelpText>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Delta Dental</fullName>
                </value>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>HMAA</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>UHA</fullName>
                </value>
                <value>
                    <fullName>VSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Received_Date__c</fullName>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sending_Method__c</fullName>
        <inlineHelpText>Select all of the ways that the Contract will be sent to the Customer.</inlineHelpText>
        <label>Contract Sending Method(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Copy - Mailed by SAS</fullName>
                </value>
                <value>
                    <fullName>Soft Copy - Emailed by Sales Account Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <inlineHelpText>Select the Type(s) of Fully Insured contracts or documents that need to be prepared for this Opportunity.</inlineHelpText>
        <label>Contract Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Multi-Year</fullName>
                </value>
                <value>
                    <fullName>Contingent</fullName>
                </value>
                <value>
                    <fullName>Reverse Contingent</fullName>
                </value>
                <value>
                    <fullName>Rider Only</fullName>
                </value>
                <value>
                    <fullName>Modified / Amendment</fullName>
                </value>
                <value>
                    <fullName>Exhibits Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>The date that the products on this Opportunity will go into effect.  The Renewal Month will be derived from the month of this field.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <inlineHelpText>Contract End Date</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>Stores the expected total employee count for this opportunity.  Could change for renewal opportunities.</description>
        <inlineHelpText>This field is initially set from the &quot;Employees&quot; field on the Account record.</inlineHelpText>
        <label>Employee Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_s_of_Total_Premium__c</fullName>
        <inlineHelpText>Enter the percent of the total premium that the employer will be covering.  Do not enter if you are using the &quot;Member out-of-pocket contribution&quot; value instead.</inlineHelpText>
        <label>Employer&apos;s % of Total Premium</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergreen_Term_Length__c</fullName>
        <formula>MONTH(Effective_End_Date__c) + (12*(YEAR(Effective_End_Date__c)-YEAR(Effective_Date__c))) - MONTH(Effective_Date__c) +1</formula>
        <label>Evergreen Term Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Enrollment_Percent__c</fullName>
        <defaultValue>1.0</defaultValue>
        <inlineHelpText>The percentage of the Total Eligible Employees, Members or Subscribers you think will choose HMSA as their carrier.</inlineHelpText>
        <label>Expected Enrollment %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Member_Percent__c</fullName>
        <description>Allows the user to indicate what percentage of people they think will choose the plan that is being offered, by applying this value to the Employee Count or the Member Count.</description>
        <label>Expected Member %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecasted_Members_For_Rollup__c</fullName>
        <description>Hidden field that references the &quot;Forecasted Members&quot; field. This hidden field is updated via a process rule and then used for the Summary Rollup field on Account.</description>
        <label>Forecasted Members For Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Members__c</fullName>
        <formula>CEILING (Total_Eligible_Members__c * Expected_Enrollment_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Eligible Members * Expected Enrollment %</inlineHelpText>
        <label>Forecasted Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <inlineHelpText>Select whether the Request is to be created brand new, reprinted or have the existing version retrieved.</inlineHelpText>
        <label>Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAS_Fulfillment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Mechanism__c</fullName>
        <description>The Funding Meachanism at the Account level indicates how the Groups included within it are being rated, or another key value that determines how they should be managed. Dependent on the Funding Type field. This field is defaulted to the values on the Account record.</description>
        <inlineHelpText>This field is originally defaulted to the Funding Mechanism on the Account record. Adjust if needed.</inlineHelpText>
        <label>Funding Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Funding_Mechanism</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Dependent on Funding Mechanism</description>
        <inlineHelpText>This field is originally defaulted to the Funding Type on the Account record. Adjust if needed.</inlineHelpText>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPA_Notice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Contact to be listed in the notice section of the GPA.</inlineHelpText>
        <label>GPA Notice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (GPA Notice Contact)</relationshipLabel>
        <relationshipName>Opportunities_GPA_Notice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_New_Group__c</fullName>
        <formula>Account.Most_Recent_Group_Create_Date__c &gt;  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if Account&apos;s Most Recent Group create date is greater than the Opportunity&apos;s create date.</inlineHelpText>
        <label>Has New Group?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Many_Hard_Copies__c</fullName>
        <inlineHelpText>Enter the quantity of hard copies you want printed for you SAS requests.</inlineHelpText>
        <label>How Many Hard Copies?</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiating_Billing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Billing Group that has prompted the creation of this Opportunity.</inlineHelpText>
        <label>Initiating Billing Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Billing Group must be on the same Account as the Opportunity.</errorMessage>
            <filterItems>
                <field>Billing_Group__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_SAS_Request_a_Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this to True if you need to have the SAS request treated as High priority, or Rushed.  Additional approval may be necessary if you do set this to True.</inlineHelpText>
        <label>Is SAS Request a Rush?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeopardy_Status__c</fullName>
        <inlineHelpText>If this Opportunity is in jeopardy, select a reason. This information is used for reporting and sales planning.</inlineHelpText>
        <label>Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not in Jeopardy</fullName>
                    <default>true</default>
                    <label>Not in Jeopardy</label>
                </value>
                <value>
                    <fullName>Risk of Jeopardy</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Closed Business</fullName>
                </value>
                <value>
                    <fullName>Data Reporting</fullName>
                </value>
                <value>
                    <fullName>Market_Study</fullName>
                    <label>Market Study</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Plan Consolidation / Ease of Admin</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                    <isActive>false</isActive>
                    <label>Competition</label>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                    <isActive>false</isActive>
                    <label>Shopping</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Business</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Plans/Benefits</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
                <value>
                    <fullName>New Ownership</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <isActive>false</isActive>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Company Closed</fullName>
                    <isActive>false</isActive>
                    <label>Company Closed</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <isActive>false</isActive>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Out-Sold</fullName>
                    <isActive>false</isActive>
                    <label>Out-Sold</label>
                </value>
                <value>
                    <fullName>Terminating Coverage</fullName>
                    <isActive>false</isActive>
                    <label>Terminating Coverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <formula>Account.Member_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_out_of_pocket_contribution__c</fullName>
        <inlineHelpText>Enter the amount the member will need to contribute to the premiums.  Do not enter if you are using the &quot;Employer&apos;s % of Total Premium&quot; value instead.</inlineHelpText>
        <label>Member out-of-pocket contribution</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <formula>IF (ISBLANK(Owner.Manager.LastName),&quot;No Manager&quot;,Owner.Manager.FirstName  &amp;  Owner.Manager.LastName)</formula>
        <label>Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <description>Stores the pain points the customers is currently experiencing, to help form the strategy.</description>
        <label>Pain Points</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Data Reporting</fullName>
                </value>
                <value>
                    <fullName>Lack of Local Customer Servicing</fullName>
                </value>
                <value>
                    <fullName>Support of Initiative / Wellness Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Confirmation_Date__c</fullName>
        <inlineHelpText>Enter the date the prospect or customer notified you that they are accepting the proposal for this opportunity.</inlineHelpText>
        <label>Proposal Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_Date__c</fullName>
        <inlineHelpText>Enter the date the you sent the initial proposal out.</inlineHelpText>
        <label>Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Benefit_info_with_confirmation__c</fullName>
        <inlineHelpText>Select to indicate if you have included the needed information or not.</inlineHelpText>
        <label>Rate &amp; Benefit info with confirmation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Shopping__c</fullName>
        <description>Stores the pain points the customers is currently experiencing, to help form the strategy.</description>
        <label>Current Challenges(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Brand / Employee Request</fullName>
                </value>
                <value>
                    <fullName>Data Reporting</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Lack of Local Customer Servicing</fullName>
                    <isActive>false</isActive>
                    <label>Lack of Local Customer Servicing</label>
                </value>
                <value>
                    <fullName>Support of Initiative / Wellness Programs</fullName>
                    <isActive>false</isActive>
                    <label>Support of Initiative / Wellness Programs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_to_Review_Documents__c</fullName>
        <inlineHelpText>Choose &apos;Yes&apos; if the original Requestor of the documents wants to review them before they go out.</inlineHelpText>
        <label>Requestor to Review Documents?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Contract_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Contact to send the Contract / Exhibit to.</inlineHelpText>
        <label>Send Contract To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Send Contract To)</relationshipLabel>
        <relationshipName>Opportunities_Send_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <formula>CASE ( TEXT ( StageName ),
&apos;New&apos;, 1, 
&apos;Planning&apos;, 2, 
&apos;Quoting / Negotiation&apos;, 3,
&apos;Post Proposal Acceptance&apos;, 4,
&apos;Closed Won&apos;, 5,
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_Count__c</fullName>
        <formula>Account.Subscriber_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Annualized_USAble_Revenue__c</fullName>
        <inlineHelpText>Roll up of all selected product&apos;s Annualized Revenue.</inlineHelpText>
        <label>Total Annualized USAble Revenue</label>
        <summarizedField>OpportunityLineItem.Annualized_Revenue_for_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Selected_By_Customer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Employees__c</fullName>
        <inlineHelpText>This field is originally set from the Total Eligible Employees field on the parent Account record.</inlineHelpText>
        <label>Total Eligible Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Members__c</fullName>
        <inlineHelpText>Defaulted from Total Eligible Employees for New To Blue and Win Back.  Defaulted from Member Count Total for Renewal and Product Change.</inlineHelpText>
        <label>Total Eligible Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Reason__c</fullName>
        <inlineHelpText>Select the reason why this was Opportunity was won.</inlineHelpText>
        <label>Won Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Business</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Plans/Benefits</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
                <value>
                    <fullName>New Ownership</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_in_Jeopardy</fullName>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity_Owner_Manager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Jeopardy_Status__c</field>
            <operation>notEqual</operation>
            <value>Not in Jeopardy</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Opportunities in Jeopardy</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_by_Stage_and_Forecasted_Me</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>Jeopardy_Status__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Kanban - Stage and Forecasted Members</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecasted_Members__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Assumptive_Renewal</fullName>
        <active>true</active>
        <businessProcess>AMS Global</businessProcess>
        <description>For Opportunities that are auto-created and auto-closed for the C000 and some C900 Agent Codes.</description>
        <label>Assumptive Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_New_to_Blue</fullName>
        <active>true</active>
        <businessProcess>AMS Global</businessProcess>
        <description>Used to make certain fields read only once the Opp is Closed Won/Lost</description>
        <label>Closed New to Blue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Product_Changes</fullName>
        <active>true</active>
        <businessProcess>AMS Global</businessProcess>
        <description>Used to make certain fields read only once the Opp is Closed Won/Lost</description>
        <label>Closed Product Changes</label>
    </recordTypes>
</CustomObject>